--- a/client/overwatch/src/App.css
+++ b/client/overwatch/src/App.css
@@ -1,6 +1,12 @@
 .App {
   text-align: center;
+  background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)),url(pics/bridgette.jpeg);
+  height:100vh;
+  background-size:cover;
+  background-position:center;
+  background-attachment: fixed;
 }
+
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
@@ -20,6 +26,13 @@
 
 .App-intro {
   font-size: large;
+}
+
+.format {
+  position: absolute;
+  left:475px;
+  top:175px;
+  color: white;
 }
 
 @keyframes App-logo-spin {
