added new forms for login and signup

--- a/client/overwatch/src/App.css
+++ b/client/overwatch/src/App.css
@@ -67,6 +67,13 @@
   top:250px;
   color: white;
 }
+.login2{
+  position: absolute;
+  left:595px;
+  top:250px;
+  color: white;
+
+}
 
 .inline{
   position:absolute;
