changed dashboard back, and changed description of modal

--- a/client/overwatch/src/App.css
+++ b/client/overwatch/src/App.css
@@ -8,7 +8,7 @@
 }
 .Dashboard2{
   text-align: center;
-  background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)),url(pics/winstonEarth.jpg);
+  background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)),url(pics/overwatch-league.jpg);
   height:100vh;
   background-size:cover;
   background-position:center;
