--- a/client/overwatch/src/App.css
+++ b/client/overwatch/src/App.css
@@ -35,7 +35,7 @@
 
 .login{
     text-align: center;
-    background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)),url(pics/overwatch-serious.jpg);
+    background-image: url(pics/overwatch-serious.jpg);
     height:100vh;
     background-size:cover;
     background-position:center;
@@ -114,3 +114,31 @@
 .message{
   display:flex;
 }
+
+.grandmaster{
+position:absolute;
+top:-340px;
+right:690px;
+-moz-transform:scale(0.5);
+-webkit-transform:scale(0.5);
+transform:scale(0.5);
+}
+
+.master{
+position:absolute;
+top:-275px;
+right:765px;
+-moz-transform:scale(0.7);
+-webkit-transform:scale(0.7);
+transform:scale(0.7);
+}
+
+.diamond{
+  position:absolute;
+  top:-275px;
+  right:775px;
+  -moz-transform:scale(0.7);
+  -webkit-transform:scale(0.7);
+  transform:scale(0.7);
+  }
+
