--- a/client/overwatch/src/App.css
+++ b/client/overwatch/src/App.css
@@ -150,14 +150,32 @@ transform:scale(0.7);
     transform:scale(0.1);
   }
 
+  .complogo{
+    background:black;
+    padding:-105px;
+    margin:-90px;
+    -moz-transform:scale(0.1);
+    -webkit-transform:scale(0.1);
+    transform:scale(0.1);
+  }
+
+  .analogo{
+    background:black;
+    padding:-105px;
+    margin:-5px;
+    -moz-transform:scale(0.1);
+    -webkit-transform:scale(0.1);
+    transform:scale(0.1);
+  }
+
   .grandlogo{
     position:relative;
     bottom:4px;
     padding:-105px;
     margin:-185px;
-    -moz-transform:scale(0.1);
-    -webkit-transform:scale(0.1);
-    transform:scale(0.1);
+    -moz-transform:scale(0.08);
+    -webkit-transform:scale(0.08);
+    transform:scale(0.08);
   }
 
   .masterlogo{
