search api response is now in redux state, added new player-profile component to render players information

--- a/client/overwatch/src/App.css
+++ b/client/overwatch/src/App.css
@@ -85,7 +85,7 @@
 
 .Searchlayout{
   position: absolute;
-  left:575px;
+  left:475px;
   top:200px;
   color: white;
 
@@ -137,7 +137,7 @@ display:block;
 margin-bottom:20px;
 }
 
-.SearchButton{
+.SearchMutton{
 position:relative;
 right:10px;
 bottom:10px;
