added progress component to render when app is loading

--- a/client/overwatch/src/App.css
+++ b/client/overwatch/src/App.css
@@ -279,3 +279,8 @@ transform:scale(0.7);
         position:relative;
         right:50px;
       }
+
+      .Progress{
+        position:relative;
+        top:300px;
+      }
