--- a/client/overwatch/src/App.css
+++ b/client/overwatch/src/App.css
@@ -383,6 +383,14 @@ left:-15px;
       -webkit-transform:scale(0.2);
       transform:scale(0.2);
       }
+    .Ana{
+      position:fixed;
+      bottom:-5px;
+      right:120px;
+      -moz-transform:scale(0.07);
+      -webkit-transform:scale(0.07);
+      transform:scale(0.07);
+    }
 
       .chatNavigation{
         position: absolute;
