--- a/client/overwatch/src/App.css
+++ b/client/overwatch/src/App.css
@@ -25,8 +25,8 @@ App {
   background-attachment: fixed;
 }
 .image{
-  height:50px;
-  width:50px;
+  height:100px;
+  width:100px;
 }
 .GChat {
   text-align: center;
@@ -156,8 +156,9 @@ App {
 
 .stream{
   color:white;
-  display:flex;
-  flex-wrap:wrap;
+display:flex;
+flex-wrap:wrap;
+justify-content:space-around;
 }
 
 .format {
