--- a/client/overwatch/src/App.css
+++ b/client/overwatch/src/App.css
@@ -1,3 +1,10 @@
+
+*{
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
+}
+
 App {
   text-align: center;
   background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)),url(pics/bridgette.jpeg);
@@ -203,7 +210,6 @@ justify-content:space-around;
   margin-top: -50px;
   margin-left: -100px;
   color:white;
-  
 }
 
 .card-body{
