--- a/client/overwatch/src/App.css
+++ b/client/overwatch/src/App.css
@@ -256,7 +256,9 @@ justify-content:space-around;
   flex-direction:column;
 }
 .Searchlayout{
-  animation:left-right 1s linear;
+  -webkit-animation:pop-in 0.5s;
+  -moz-animation:pop-in 0.5s;
+  -ms-animation:pop-in 0.5s;
   display:flex;
   flex-direction:column;
   position:fixed;
@@ -399,6 +401,19 @@ justify-content:space-around;
   from {transform:translateX(1000px)}
   to {transform:translateX(0px)}
 }
+
+@-webkit-keyframes pop-in {
+  0% { opacity: 0; -webkit-transform: scale(0.5); }
+  100% { opacity: 1; -webkit-transform: scale(1); }
+  }
+  @-moz-keyframes pop-in {
+  0% { opacity: 0; -moz-transform: scale(0.5); }
+  100% { opacity: 1; -moz-transform: scale(1); }
+  }
+  @keyframes pop-in {
+  0% { opacity: 0; transform: scale(0.5); }
+  100% { opacity: 1; transform: scale(1); }
+  }
 
 .card-body{
   height:300px;
