--- a/client/overwatch/src/App.css
+++ b/client/overwatch/src/App.css
@@ -155,9 +155,9 @@ App {
   text-align: center;
   background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)),url(pics/overwatchTeam.jpg);
   height:100vh;
-  background-size:cover;
+  background-repeat:no-repeat;
+  background-size:contain;
   background-position:center;
-  background-attachment: fixed;
 }
 
 .login{
